@@ -6,6 +6,10 @@ cd target/classes
 
 className=EscapeAnalysisTest
 
+
+
+java -server -Xmx10m -Xms10m -XX:+PrintGC ${className}
+
 echo '逃逸分析开启：'
 java -server -Xmx10m -Xms10m -XX:+DoEscapeAnalysis -XX:+PrintGC ${className}
 echo '逃逸分析关闭：'
